# wiseconnect

./: .driverignore  README.md  bluetooth_le_siwx91x.slce.extra  bluetooth_le_siwx91x_app_templates.xml  build_example_apps.sh  license.md  multi_protocol_siwx91x_app_demos.xml  multi_protocol_siwx91x_app_templates.xml  platform_nwp_siwx91x.slce.extra  platform_nwp_siwx91x_app_demos.xml  platform_nwp_siwx91x_app_templates.xml  platform_siwx91x.slce.extra  platform_siwx91x_app_templates.xml  templates.xml  upgrade.slcu  upgrade_component_nvm3_network_manager.lua  upgrade_script.lua  wifi.slce.extra  wifi_app_demos.xml  wifi_app_templates.xml  wifi_templates.xml  wiseconnect.slce  wiseconnect.slsdk  wiseconnect.xapi  wiseconnect3.slce  wiseconnect3.slsdk  wiseconnect3.xapi  wiseconnect3_demos.xml  wiseconnect3_docs.xml  wiseconnect_demos.xml  wiseconnect_docs.xml
components/at_commands_auto_gen/: at_commands_auto_gen.slcc  at_power_manager.slcc  ble_at_commands.slcc  bsd_socket_at_commands.slcc  fs_at_commands.slcc  fwup_at_commands.slcc  http_at_commands.slcc  mqtt_at_commands.slcc  net_at_commands.slcc  uart_at_commands.slcc  uart_at_commands_config.h  wifi_at_commands.slcc  wifi_commands.h
components/common/: doxygen-common.cfg  doxygen-ip-addresses.cfg  malloc_thread_safety.slcc  wiseconnect3_common.slcc  wiseconnect_common.slcc
components/console/: console.c  console.h  console.mk  console.slcc  console_argument_types.c.template  console_argument_types.h.template  console_command_database.c.template  console_command_processing.template  console_constants.h  console_minimal_uart_plugin.c  console_types.h  console_variable_group_processing.template  console_variable_table.c.template  console_variable_table.yaml.template  readme.md
components/console_auto_gen/: console_auto_gen.slcc
components/device/silabs/si91x/mcu/hal/sli_hal_si91x/unit_tests/: CMakeLists.txt
components/device/silabs/si91x/mcu/hal/sli_hal_si91x/unit_tests/inc/: sli_hal_si91x_fake_functions.h
components/device/silabs/si91x/mcu/hal/sli_hal_si91x/unit_tests/src/: sli_hal_si91x_fake_functions.c  sli_hal_si91x_unit_tests.cpp
components/device/silabs/si91x/wireless/asynchronous_socket/unit_tests/: CMakeLists.txt
components/device/silabs/si91x/wireless/asynchronous_socket/unit_tests/inc/: sli_async_socket_fake_functions.h
components/device/silabs/si91x/wireless/asynchronous_socket/unit_tests/src/: sli_async_socket_fake_functions.c  sli_async_socket_unit_tests.cpp
components/device/silabs/si91x/wireless/crypto/aes/unit_tests/: CMakeLists.txt
components/device/silabs/si91x/wireless/crypto/aes/unit_tests/inc/: sli_aes_fake_functions.h
components/device/silabs/si91x/wireless/crypto/aes/unit_tests/src/: sli_aes_fake_functions.c  sli_aes_unit_tests.cpp
components/device/silabs/si91x/wireless/sl_net/unit_tests/: CMakeLists.txt
components/device/silabs/si91x/wireless/sl_net/unit_tests/inc/: sl_net_fake_functions.h
components/device/silabs/si91x/wireless/sl_net/unit_tests/src/: sl_net_fake_functions.c  sl_net_unit_tests.cpp
components/device/silabs/si91x/wireless/socket/unit_tests/: CMakeLists.txt
components/device/silabs/si91x/wireless/socket/unit_tests/inc/: sl_si91x_socket_utility_fake_function.h
components/device/silabs/si91x/wireless/socket/unit_tests/src/: sl_si91x_socket_utility_fake_function.c  sl_si91x_socket_utility_unit_tests.cpp
components/logger/: wiseconnect3_logger.slcc  wiseconnect_logger.slcc
components/service/network_manager/unit_tests/: CMakeLists.txt  network_manager_sl_net.cpp
components/si91x/: si91x.slcc  si91x.yakka  si91x_basic_buffers.slcc  si91x_basic_buffers.yakka  si91x_core.slcc  si91x_core.yakka  si91x_internal_stack.slcc  si91x_internal_stack.yakka  si91x_lwip_stack.slcc  si91x_lwip_stack.yakka
components/si91x_support/: linkerfile.ld.jinja  si91x_support.slcc  si91x_support.yakka  sl_device.mk  sl_device.yakka  sl_device_init_clocks.c.jinja  sl_event_handler.c.template  sl_event_handler.h.template  sl_lib.mk  sl_platform.c.template
components/siwx917_soc/: linkerfile_SoC.ld  rsi_hal_mcu_m4_ram.c  rsi_hal_mcu_m4_rom.c  siwx917_soc.slcc  siwx917_soc.yakka  sl_platform.c  sl_platform_wireless.c  sl_si91x_bus.c  sl_si91x_timer.c  sl_siwx917_platform.slcc  sl_siwx917_systemcall.slcc  sl_uart.c  sli_siwx917_soc.c
components/sl_tls/: sl_tls.slcc  sl_tls.yakka
components/sli_buffer_manager/: sli_buffer_manager.slcc
components/sli_buffer_manager/unit_tests/: CMakeLists.txt
components/sli_buffer_manager/unit_tests/inc/: sli_buffer_manager_fake_function.h
components/sli_buffer_manager/unit_tests/src/: sli_buffer_manager_fake_function.c  sli_buffer_manager_unit_tests.cpp
components/sli_queue_manager/unit_tests/: CMakeLists.txt
components/sli_queue_manager/unit_tests/inc/: sli_queue_manager_fake_function.h
components/sli_queue_manager/unit_tests/src/: sli_queue_manager_fake_function.c  sli_queue_manager_unit_tests.cpp
components/sli_routing_utility/unit_tests/: CMakeLists.txt
components/sli_routing_utility/unit_tests/inc/: sli_routing_utility_fake_function.h
components/sli_routing_utility/unit_tests/src/: sli_routing_utility.cpp  sli_routing_utility_fake_function.c
connectivity_firmware/: README.md  SiWG917-A.2.9.0.0.15.rps  SiWG917-A.2.9.0.0.19.rps  SiWG917-A.2.9.0.0.20.rps  SiWG917-A.2.9.0.0.21.rps  SiWG917-A.2.9.0.0.7.rps  SiWG917-A.2.9.0.0.8.rps  SiWG917-B.2.10.0.0.4.rps  SiWG917-B.2.10.1.1.0.2.rps  SiWG917-B.2.10.1.2.0.4.rps  SiWG917-B.2.10.1.2.6.6.rps  SiWG917-B.2.10.1.2.6.8.rps  SiWG917-B.2.10.1.3.0.7.rps  SiWG917-B.2.11.1.0.0.7.rps  SiWG917-B.2.9.0.0.15.rps  SiWG917-B.2.9.0.0.19.rps  SiWG917-B.2.9.0.0.20.rps  SiWG917-B.2.9.0.0.21.rps  SiWG917-B.2.9.0.0.7.rps  SiWG917-B.2.9.0.0.8.rps
docs/: index.html
out_of_box_demo/: out-of-box-demo-soc.rps
resources/: resources.slcc  resources.yakka  wifi_resources.slcc
utilities/: readme.txt
wstk_firmware/: wstk_firmware_package_1v4p10b215.emz  wstk_firmware_package_1v4p10b215.emz:6E53BFF5-0001-412b-8407-E3AEDE763511  wstk_firmware_package_1v4p10b215.emz:MSOAVINFO
(+5735 files in other folders)
